examples/errors/dynamic_typing.ign
<program>
  <var name=hello>
    {2}
  </var>
  hello = {str(2)}
  {print(type(hello))}
</program>